# ork

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  build_managers_deck.py  ordering.md  ork-current-state-ru.pptx  ork-for-managers-ru.pptx  todos.md
config/: default.toml  (+1 more)
crates/ork-agents/: Cargo.toml
crates/ork-agents/src/: code_agent.rs  hooks.rs  instruction_spec.rs  lib.rs  local.rs  model_spec.rs  registry.rs  rig_engine.rs  roles.rs  tool_catalog.rs
crates/ork-agents/tests/: code_agent_a2a_surface.rs  code_agent_dynamic.rs  code_agent_extractor.rs  code_agent_hooks.rs  code_agent_memory.rs  code_agent_request_context_schema.rs  code_agent_required_fields.rs  code_agent_tool_call_event.rs  rig_engine_mcp_smoke.rs  rig_engine_smoke.rs  tool_catalog_parity.rs  tool_loop_history.rs  workflow_step_overrides_reach_llm.rs
crates/ork-api/: Cargo.toml
crates/ork-api/src/: artifact_inbound.rs  artifact_retention.rs  artifacts_boot.rs  dto.rs  error.rs  gateways.rs  idempotency.rs  lib.rs  llm_catalog.rs  main.rs  middleware.rs  openapi.rs  remote_agents.rs  router_for.rs  scope_check.rs  sse_buffer.rs  state.rs
crates/ork-api/tests/: a2a_convenience.rs  a2a_dispatcher.rs  a2a_push_config.rs  a2a_stream.rs  auth_middleware.rs  auto_agents_generate.rs  auto_openapi_snapshot.rs  auto_tenant_header.rs  boot.rs  discovery_roundtrip.rs  mcp_wiring_smoke.rs  mesh_token_middleware.rs  push_jwks_endpoint.rs  push_outbox_delivery.rs  push_outbox_retry.rs  push_set_validation.rs  push_webhook_ack.rs  sse_buffer.rs  tenants_routes_smoke.rs  well_known_card.rs
crates/ork-app/: Cargo.toml
crates/ork-app/examples/: serve_inspect_only_probe.rs
crates/ork-app/src/: app.rs  builder.rs  id.rs  inner.rs  lib.rs  manifest.rs  tool_executor.rs  types.rs
crates/ork-app/tests/: builder_smoke.rs  code_agent_cross_ref.rs  dependencies_guard.rs  manifest_roundtrip.rs  no_infra_imports.rs  serve_smoke.rs  studio_loopback_guard.rs
crates/ork-cache/: Cargo.toml
crates/ork-cache/src/: lib.rs
crates/ork-cli/: Cargo.toml
crates/ork-cli/src/: build_cmd.rs  eval.rs  lib.rs  lint.rs  main.rs  migrate.rs  start.rs
crates/ork-cli/tests/: build_smoke.rs  dev_smoke.rs  init_smoke.rs  inspect_smoke.rs  lint_migrate_stubs.rs  start_smoke.rs
crates/ork-common/: Cargo.toml
crates/ork-common/src/: auth.rs  config.rs  error.rs  lib.rs  mcp_config.rs  types.rs
crates/ork-core/: Cargo.toml
crates/ork-core/src/: agent_registry.rs  artifact_spill.rs  lib.rs
crates/ork-core/tests/: delegation_policy.rs  delegation_step_child_workflow.rs  delegation_step_cycle_cap.rs  delegation_step_fire_and_forget.rs  delegation_step_local.rs  delegation_step_unknown_agent.rs  embeds_early_smoke.rs  embeds_late_smoke.rs  embeds_parser.rs  embeds_status_update_smoke.rs  engine_failed_step_does_not_cascade.rs  engine_one_step.rs  engine_persists_parent_task.rs
crates/ork-eval/: Cargo.toml
crates/ork-eval/src/: agent_hook.rs  lib.rs  live.rs  metrics.rs  runner.rs  sampling.rs  spec.rs
crates/ork-eval/tests/: boundaries.rs  judge_model_smoke.rs  live_sampling.rs  runner_smoke.rs  scorers.rs
crates/ork-eventing/: Cargo.toml
crates/ork-eventing/src/: client.rs  consumer.rs  delegation_publisher.rs  discovery.rs  error.rs  gateway_discovery.rs  in_memory.rs  lib.rs  producer.rs  rskafka_backend.rs
crates/ork-eventing/tests/: rskafka_roundtrip.rs  trait_objects.rs
crates/ork-gateways/: Cargo.toml
crates/ork-gateways/src/: auth.rs  bootstrap.rs  event_mesh.rs  hmac_util.rs  lib.rs  mcp_gw.rs  noop_gateway.rs  registry.rs  rest.rs  webhook.rs
crates/ork-integrations/: Cargo.toml
crates/ork-integrations/src/: agent_call.rs  artifact_tools.rs  artifact_wire.rs  code_tools.rs  github.rs  gitlab.rs  lib.rs  native_tool_defs.rs  tool_plane.rs  tools.rs  workspace.rs
crates/ork-integrations/tests/: a2a_client.rs  agent_call_tool.rs  mesh_token_outbound.rs  reference_server.rs  workspace_concurrent.rs
crates/ork-llm/: Cargo.toml
crates/ork-llm/src/: embedder.rs  lib.rs  minimax.rs  openai_compatible.rs  router.rs
crates/ork-llm/tests/: openai_compatible_headers.rs  openai_compatible_stream_retry.rs  router_smoke.rs
crates/ork-mcp/: Cargo.toml
crates/ork-mcp/src/: auth.rs  boot.rs  cache.rs  client.rs  config.rs  descriptor.rs  lib.rs  session.rs  transport.rs
crates/ork-mcp/tests/: stdio_everything_server.rs  streamable_http_in_process.rs
crates/ork-memory/: Cargo.toml
crates/ork-memory/src/: embedder.rs  lib.rs  libsql_backend.rs  postgres_backend.rs  shapes.rs  types.rs
crates/ork-memory/tests/: no_infra_imports.rs  semantic_recall.rs  working_memory.rs
crates/ork-persistence/: Cargo.toml
crates/ork-persistence/tests/: a2a_push_repo.rs  a2a_task_repo.rs  rls_smoke.rs  tenant_secrets_smoke.rs  workflow_snapshot_repo.rs
crates/ork-push/: Cargo.toml
crates/ork-push/src/: encryption.rs  janitor.rs  lib.rs  outbox.rs  signing.rs  worker.rs
crates/ork-security/: Cargo.toml
crates/ork-security/src/: audit.rs  kms.rs  lib.rs  mesh.rs  scopes.rs  tenant_cipher.rs
crates/ork-server/: Cargo.toml
crates/ork-server/src/: lib.rs
crates/ork-storage/: Cargo.toml
crates/ork-storage/src/: azblob.rs  chained.rs  fs.rs  gcs.rs  lib.rs  s3.rs  scope_path.rs  scoped.rs
crates/ork-storage/tests/: chained_smoke.rs  fs_smoke.rs  s3_minio_smoke.rs
crates/ork-studio/: Cargo.toml
crates/ork-studio/src/: auth.rs  embed.rs  envelope.rs  lib.rs
crates/ork-studio/tests/: api_envelope.rs  eval_run.rs  memory_thread_delete.rs
crates/ork-studio/web/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
crates/ork-tool/: Cargo.toml  README.md
crates/ork-tool/src/: builder.rs  context.rs  into_tool_def.rs  lib.rs  retry.rs  tool.rs
crates/ork-webui/: Cargo.toml
crates/ork-workflow/: Cargo.toml
demo/langgraph-agent/: README.md  pyproject.toml
demo/peer-agent/: Cargo.toml
demo/studio-tour/: .env.example  .gitignore  Cargo.toml  README.md  boot.sh
demo/webhook-receiver/: Cargo.toml
(+385 files in other folders)
