[workspace]
resolver = "2"
members = [
    "crates/ork-a2a",
    "crates/ork-api",
    "crates/ork-app",
    "crates/ork-workflow",
    "crates/ork-cli",
    "crates/ork-core",
    "crates/ork-tool",
    "crates/ork-agents",
    "crates/ork-cache",
    "crates/ork-eventing",
    "crates/ork-gateways",
    "crates/ork-integrations",
    "crates/ork-llm",
    "crates/ork-mcp",
    "crates/ork-memory",
    "crates/ork-persistence",
    "crates/ork-common",
    "crates/ork-push",
    "crates/ork-security",
    "crates/ork-server",
    "crates/ork-storage",
    "crates/ork-webui",
    "crates/ork-eval",
    "crates/ork-studio",
]
exclude = [
    "demo/peer-agent",
    "demo/webhook-receiver",
    "demo/langgraph-agent",
    "demo/studio-tour",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Internal crates
ork-a2a = { path = "crates/ork-a2a" }
ork-api = { path = "crates/ork-api" }
ork-app = { path = "crates/ork-app" }
ork-cli = { path = "crates/ork-cli" }
ork-core = { path = "crates/ork-core" }
ork-tool = { path = "crates/ork-tool" }
ork-agents = { path = "crates/ork-agents" }
ork-cache = { path = "crates/ork-cache" }
ork-eventing = { path = "crates/ork-eventing" }
ork-gateways = { path = "crates/ork-gateways" }
ork-integrations = { path = "crates/ork-integrations" }
ork-llm = { path = "crates/ork-llm" }
ork-mcp = { path = "crates/ork-mcp" }
ork-memory = { path = "crates/ork-memory" }
ork-persistence = { path = "crates/ork-persistence" }
ork-common = { path = "crates/ork-common" }
ork-push = { path = "crates/ork-push" }
ork-security = { path = "crates/ork-security" }
ork-server = { path = "crates/ork-server" }
ork-storage = { path = "crates/ork-storage" }
ork-webui = { path = "crates/ork-webui" }
ork-workflow = { path = "crates/ork-workflow" }
ork-eval = { path = "crates/ork-eval" }
ork-studio = { path = "crates/ork-studio" }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive"] }
jsonschema = "0.26"
# ADR-0056: hand-built OpenAPI 3.1 emitter for the auto-generated REST surface.
openapiv3 = "2"
indexmap = "2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
libsql = { version = "0.6", default-features = false, features = ["core", "serde"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Streams
futures = "0.3"
async-stream = "0.3"

# GitHub
octocrab = "0.44"

# Utilities
url = "2"
urlencoding = "2.1"
base64 = "0.22"
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
config = "0.14"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Local agent rig engine (ADR-0047)
rig-core = { version = "0.36", default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Metrics (ADR-0054 scorer_dropped_total; ADR-0058 will broaden usage)
prometheus-client = "0.22"

# Glob matching (ADR-0054 ScorerTarget::Wildcard)
glob = "0.3"

# Random sampling (ADR-0054 Sampling::Ratio)
fastrand = "2"

# Scheduling
cron = "0.15"

# Dynamic embeds (ADR-0015)
evalexpr = "11.3"

# Eventing / Kafka (pure-Rust client per ADR 0004)
rskafka = { version = "0.6", default-features = false, features = ["transport-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
bytes = "1"

# ADR-0016 artifact storage (S3 + MinIO)
aws-config = { version = "1.5" }
aws-sdk-s3 = { version = "1" }
aws-smithy-types = { version = "1" }
aws-types = { version = "1" }
mime_guess = "2"
tempfile = "3"

# Web UI (ADR-0017): static SPA embed in ork-webui (`embed-spa` feature)
include_dir = "0.7"

# Studio (ADR-0055): embedded Vite/React SPA bundle in `ork-studio`.
# ADR text specifies `rust-embed` (divergent from `ork-webui`'s `include_dir`).
rust-embed = { version = "8", features = ["mime-guess"] }

# Studio (ADR-0055) browser-open hook in `ork dev`.
open = "5"

# A2A remote agent (ADR 0007)
eventsource-stream = "0.2"
secrecy = { version = "0.10", features = ["serde"] }
backon = "1"

# MCP client (ADR 0010). Pinned to 0.16.x; transports enabled match the three
# documented in the ADR (`stdio`, `streamable-http`, legacy `sse`). The
# `client` feature pulls the `RoleClient` API; `transport-child-process`
# brings the `tokio` child-process integration; the two HTTP-side features
# default to the `reqwest` driver so we keep a single HTTP stack process-wide.
# Note: `server` is enabled because rmcp 0.16's `macros` feature emits code
# that calls into `handler::server::tool::schema_for_*`. We don't host an MCP
# server in production code; the feature is only needed to satisfy the
# crate-internal tool/handler macro expansion.
rmcp = { version = "0.16", default-features = false, features = [
    "macros",
    "server",
    "client",
    "client-side-sse",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "reqwest",
] }

# Push notifications (ADR 0009): JWS signing + envelope encryption
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2.5"
rand = "0.8"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "jwk", "pem", "std"] }

# HTTP mocking for tests
wiremock = "0.6"
proptest = "1"
# Containerised integration tests (ADR-0007 reference-server-it). Default-off,
# only consumed under `--features reference-server-it` so CI can opt into the
# heavier docker-backed run.
testcontainers = "0.23"

# ADR-0057 dev-loop CLI
notify-debouncer-mini = "0.4"
cargo_metadata = "0.18"
which = "6"
nix = { version = "0.29", features = ["signal"] }
assert_cmd = "2"
predicates = "3"

