[package]
name = "ork-agents"
version.workspace = true
edition.workspace = true

[dependencies]
ork-a2a = { workspace = true }
ork-common = { workspace = true }
ork-core = { workspace = true }
ork-integrations = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
glob = "0.3"

[dev-dependencies]
chrono = { workspace = true }
