[package]
name = "ork-agents"
version.workspace = true
edition.workspace = true

[dependencies]
ork-a2a = { workspace = true }
ork-common = { workspace = true }
ork-core = { workspace = true }
ork-integrations = { workspace = true }
ork-tool = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
glob = "0.3"
rig-core = { workspace = true, optional = true }
tokio-stream = { workspace = true }

[features]
default = ["rig-engine"]
rig-engine = ["dep:rig-core"]
mcp-stdio-it = []

[dev-dependencies]
chrono = { workspace = true }
ork-mcp = { workspace = true }
tempfile = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "stream",
    "form",
    "rustls",
    "http2",
    "charset",
] }
