[package]
name = "ork-api"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ork-server"
path = "src/main.rs"

[dependencies]
ork-common = { workspace = true }
ork-core = { workspace = true }
ork-agents = { workspace = true }
ork-eventing = { workspace = true }
ork-a2a = { workspace = true }
ork-integrations = { workspace = true }
ork-llm = { workspace = true }
# ADR-0010: MCP client. Wired through `CompositeToolExecutor::with_mcp`
# so workflow agents can invoke `mcp:<server>.<tool>` tools alongside
# the existing GitHub / GitLab / code / agent_call routes.
ork-mcp = { workspace = true }
ork-persistence = { workspace = true }
ork-push = { workspace = true }
ork-cache = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
url = { workspace = true }
async-trait = { workspace = true }
wiremock = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
