[package]
name = "ork-cache"
version.workspace = true
edition.workspace = true

[dependencies]
ork-common = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
