[package]
name = "ork-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
toml = "0.8"
serde_yaml = { workspace = true }
