[package]
name = "ork-gateways"
version.workspace = true
edition.workspace = true

[dependencies]
ork-a2a = { workspace = true }
ork-common = { workspace = true }
ork-core = { workspace = true }
ork-eventing = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "server",
    "transport-streamable-http-server",
] }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
