[package]
name = "ork-integrations"
version.workspace = true
edition.workspace = true

[dependencies]
ork-a2a = { workspace = true }
ork-cache = { workspace = true }
ork-common = { workspace = true }
ork-core = { workspace = true }
ork-storage = { workspace = true }
octocrab = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
eventsource-stream = { workspace = true }
secrecy = { workspace = true }
backon = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
secrecy = { workspace = true }
# Pulled in only for `--features reference-server-it`. Kept in dev-dependencies
# (rather than opt-in deps) because Cargo's integration-test features always
# resolve dev-dependencies; the test body is gated by `cfg(feature = "...")`.
testcontainers = { workspace = true }

[features]
default = []
# ADR-0007 §`A2A reference-server integration test`. Off by default because the
# job needs a working Docker daemon; CI flips this on (and only this) for the
# `reference-server-it` matrix entry.
reference-server-it = []

