[package]
name = "ork-llm"
version.workspace = true
edition.workspace = true

[dependencies]
ork-common = { workspace = true }
ork-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
uuid = { workspace = true }
